# Rastro

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_projects_documents_chunks.py  0003_search_logs.py  0004_chunks_fts.py  0005_chat_memory.py  0005b_message_embeddings.py  0005c_document_visibility.py  0007_team_project_members.py  0008_obligations.py  0009_user_memory_enabled.py  0010_boe_tables.py  0011_folder_mappings.py  0012_entity_graph.py
backend/app/: config.py  database.py  dependencies.py  main.py  security.py
backend/app/api/: admin.py  auth.py  chat.py  clause_comparison.py  documents.py  folder_mappings.py  integrations.py  knowledge_graph.py  memory.py  obligations.py  projects.py  search.py  team.py
backend/app/models/: __init__.py  boe.py  chunk.py  conversation.py  document.py  entity.py  folder_mapping.py  integration_token.py  invite.py  memory.py  message.py  obligation.py  organization.py  project.py  project_member.py  search_log.py  user.py
backend/app/schemas/: auth.py  chat.py  clause_comparison.py  document.py  folder_mapping.py  integration.py  memory.py  obligation.py  project.py  search.py
backend/app/scripts/: backfill_message_embeddings.py
backend/app/services/: base.py  boe_client.py  boe_ingestion.py  boe_plugin.py  clause_comparison.py  date_extractor.py  embeddings.py  entity_extractor.py  ingestion.py  knowledge_base.py  knowledge_registry.py  memory_extractor.py  rag.py  reranker.py  storage.py
backend/app/worker/: main.py  queue.py
backend/app/worker/handlers/: boe.py  date_extraction.py  drive.py  entity_extraction.py  gmail.py  memory.py  message_embedder.py  upload.py
backend/scripts/: boe_sync.py
frontend/: index.html  package-lock.json  package.json
infra/: localstack-init.sh
tests/: conftest.py  test_auth.py  test_boe.py  test_chat.py  test_document_visibility.py  test_documents.py  test_folder_mappings.py  test_full_memory.py  test_hybrid_search.py  test_ingestion.py  test_integrations.py  test_memory.py  test_rag.py  (+5 more)
(+44 files in other folders)
